# libeagle

./: CMakeLists.txt  README.md  bootstrap_msvc.sh  eagle.cpp  eagle.h  main.cpp  stream_buffer.h
test/intertechnik/: DESCRIPTION
